# pokesimu

./: Cargo.toml  README.md
crates/battle_context/: Cargo.toml
crates/common_domain/: Cargo.toml
crates/pokedex_context/: Cargo.toml
data/ability/: adaptability.json  aerilate.json  aftermath.json  air-lock.json  analytic.json  anger-point.json  anger-shell.json  anticipation.json  aqua-boost.json  arena-trap.json  armor-tail.json  aroma-veil.json  as-one-glastrier.json  as-one-spectrier.json  aura-break.json  bad-dreams.json  ball-fetch.json  battery.json  battle-armor.json  battle-bond.json  beads-of-ruin.json  beast-boost.json  berserk.json  big-pecks.json  black-hole.json  blaze.json  bodyguard.json  bonanza.json  bulletproof.json  calming.json  celebrate.json  cheek-pouch.json  chilling-neigh.json  chlorophyll.json  clear-body.json  climber.json  cloud-nine.json  color-change.json  comatose.json  commander.json  (+327 more)
data/berry/: aguav.json  apicot.json  aspear.json  babiri.json  belue.json  bluk.json  charti.json  cheri.json  chesto.json  chilan.json  chople.json  coba.json  colbur.json  cornn.json  custap.json  durin.json  enigma.json  figy.json  ganlon.json  grepa.json  haban.json  hondew.json  iapapa.json  jaboca.json  kasib.json  kebia.json  kelpsy.json  lansat.json  leppa.json  liechi.json  lum.json  mago.json  magost.json  micle.json  nanab.json  nomel.json  occa.json  oran.json  pamtre.json  passho.json  (+24 more)
data/evolution-chain/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  (+529 more)
src/: main.rs
(+6540 files in other folders)
